updated readme and refactored code

--- a/pre-process.ipynb
+++ b/pre-process.ipynb
@@ -1248,8 +1248,20 @@
    "outputs": [],
    "source": [
     "visual[\"lga\"].fillna(\"missing\", inplace=True)\n",
-    "visual[\"lga\"].value_counts(normalize=True).mul(100).round(1).astype(str) + '%'\n",
-    "\n",
+    "visual[\"lga\"].value_counts(normalize=True).mul(100).round(1).astype(str) + '%'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "for df in together:\n",
     "    df.drop([\"region\", \"lga\"], axis=1, inplace=True)"
    ],
